Item 6165 : Add optional manifest digest validation

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -794,6 +794,14 @@ MANIFEST_FILE_NAME_CHECK.KO=Échec du contrôle du nom du bordereau de transfert
 MANIFEST_FILE_NAME_CHECK.FATAL=Erreur technique lors du contrôle du nom du bordereau de transfert
 MANIFEST_FILE_NAME_CHECK.WARNING=Avertissement lors du contrôle du nom du bordereau de transfert
 
+MANIFEST_DIGEST_CHECK=Contrôle de l''empreinte du bordereau de transfert
+MANIFEST_DIGEST_CHECK.STARTED=Début du contrôle de l''empreinte du bordereau de transfert
+MANIFEST_DIGEST_CHECK.STARTED.OK=Succès du début du contrôle de l''empreinte du bordereau de transfert
+MANIFEST_DIGEST_CHECK.OK=Succès du contrôle de l''empreinte du bordereau de transfert : fichier conforme
+MANIFEST_DIGEST_CHECK.KO=Échec du contrôle de l''empreinte du bordereau de transfert : fichier non conforme
+MANIFEST_DIGEST_CHECK.FATAL=Erreur technique lors du contrôle de l''empreinte du bordereau de transfert
+MANIFEST_DIGEST_CHECK.WARNING=Avertissement lors du contrôle de l''empreinte du bordereau de transfert
+
 CHECK_CONTAINER=Contrôle du format du conteneur du SIP
 CHECK_CONTAINER.STARTED=Début du contrôle du format du conteneur du SIP
 CHECK_CONTAINER.STARTED.OK=Succès du début du contrôle du format du conteneur du SIP
