6534 - Fix disable lfc when nothing to extract and add french translation.

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1451,6 +1451,28 @@ LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.KO=Échec 
 LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.WARNING=Avertissement lors de l''indexation des métadonnées du groupe d''objets lors d''une opération de préservation
 LFC.PRESERVATION_INDEXATION_METADATA.PRESERVATION_INDEXATION_METADATA.FATAL=Erreur technique lors de l''indexation des métadonnées du groupe d''objets lors d''une opération de préservation
 
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS=Vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.STARTED=Début de la vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.STARTED.OK=Succès du début de la vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.OK=Succès de la vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.KO=Échec de la vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.WARNING=Avertissement lors de la vérification de la sécurité des groupes d''objets techniques
+LFC.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.PRESERVATION_OBJECTGROUP_METADATA_SECURITY_CHECKS.FATAL=Erreur technique lors de la vérification de la sécurité des groupes d''objets techniques
+
+LFC.PRESERVATION_EXTRACTION_AU=Extraction des métadonnées descriptives
+LFC.PRESERVATION_EXTRACTION_AU.STARTED=Début de l''extraction des métadonnées descriptives
+LFC.PRESERVATION_EXTRACTION_AU.OK=Succès de l''extraction des métadonnées descriptives
+LFC.PRESERVATION_EXTRACTION_AU.KO=Échec de l''extraction des métadonnées descriptives
+LFC.PRESERVATION_EXTRACTION_AU.WARNING=Avertissement lors de l''extraction des métadonnées descriptives
+LFC.PRESERVATION_EXTRACTION_AU.FATAL=Erreur technique lors de l''extraction des métadonnées descriptives
+
+LFC.PRESERVATION_INSERTION_AU_METADATA=Indexation des métadonnées des unités archivistiques
+LFC.PRESERVATION_INSERTION_AU_METADATA.STARTED=Début de l''indexation des métadonnées des unités archivistiques
+LFC.PRESERVATION_INSERTION_AU_METADATA.OK=Succès de l''indexation des métadonnées des unités archivistiques
+LFC.PRESERVATION_INSERTION_AU_METADATA.KO=Échec de l''indexation des métadonnées des unités archivistiques
+LFC.PRESERVATION_INSERTION_AU_METADATA.WARNING=Avertissement lors de l''indexation des métadonnées des unités archivistiques
+LFC.PRESERVATION_INSERTION_AU_METADATA.FATAL=Erreur technique lors de l''indexation des métadonnées des unités archivistiques
+
 LFC.CHECK_DIGEST.CALC_CHECK=Calcul d''une empreinte en SHA-512
 LFC.CHECK_DIGEST.CALC_CHECK.STARTED=Début du calcul d''une empreinte en SHA-512
 LFC.CHECK_DIGEST.CALC_CHECK.OK=Succès du calcul d''une empreinte en SHA-512
