[BUG-6240]absence de recalcul de poids de fichier à l'entrée

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1028,6 +1028,12 @@ CHECK_DIGEST.FATAL=Erreur technique lors de la vérification de l''empreinte des
 CHECK_DIGEST.WARNING=Avertissement lors de la vérification de l''empreinte des objets
 CHECK_DIGEST.ALREADY_EXECUTED=Action déjà exécutée : Pas de vérification de l''empreinte des objets
 
+CHECK_SIZE=Vérification de la taille des fichiers
+CHECK_SIZE.OK=Succès de la vérification de la taille des fichiers
+CHECK_SIZE.WARNING=Avertissement lors de la vérification de la taille des fichiers
+CHECK_SIZE.KO=Échec de la vérification de la taille des fichiers
+CHECK_SIZE.FATAL=Erreur technique lors de la vérification de la taille des fichiers
+
 CHECK_DATAOBJECTPACKAGE.CHECK_NO_OBJECT=Vérification de l''absence d''objet
 CHECK_DATAOBJECTPACKAGE.CHECK_NO_OBJECT.OK=Succès de la vérification de l''absence d''objet
 CHECK_DATAOBJECTPACKAGE.CHECK_NO_OBJECT.KO=Échec de la vérification de l''absence d''objet : objet(s) trouvé(s)
@@ -1487,6 +1493,21 @@ LFC.CHECK_DIGEST.CALC_CHECK.KO=Échec du calcul d''une empreinte en SHA-512
 LFC.CHECK_DIGEST.CALC_CHECK.EMPTY.KO=Échec de la lecture de l''empreinte du fichier
 LFC.CHECK_DIGEST.CALC_CHECK.INVALID.KO=Échec de la vérification de l''empreinte du fichier
 LFC.CHECK_DIGEST.CALC_CHECK.FATAL=Erreur technique lors calcul d''une empreinte en SHA-512
+
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE=Vérification de la taille des fichiers
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE.STARTED=Début de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE.OK=Succès de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE.WARNING=Avertissement lors de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE.KO=Échec de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.CHECK_OBJECT_SIZE.FATAL=Erreur technique lors de la vérification de la taille des fichiers
+
+LFC.CHECK_SIZE=Vérification de la taille des fichiers
+LFC.CHECK_SIZE.STARTED=Début de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.STARTED.OK=Succès du début de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.OK=Succès de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.KO=Échec de la vérification de la taille des fichiers
+LFC.CHECK_SIZE.WARNING=Avertissement lors de la vérfication de la taille des fichiers
+LFC.CHECK_SIZE.FATAL= Erreur technique lors de la vérification de la taille des fichiers
 
 LFC.PRESERVATION_BINARY_HASH=Calcul d''une empreinte en SHA-512
 LFC.PRESERVATION_BINARY_HASH.STARTED=Début du calcul d''une empreinte en SHA-512
