item 6522 upgrade ontology check

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -269,6 +269,12 @@ IMPORT_ONTOLOGY.WARNING=Avertissement lors du processus d''import de l''ontologi
 IMPORT_ONTOLOGY.KO=Échec du processus d''import de l''ontologie
 IMPORT_ONTOLOGY.FATAL=Erreur technique lors du processus d''import de l''ontologie
 
+CHECK_ONTOLOGY_IMPORT=Processus de vérification d''import de l''ontologie
+CHECK_ONTOLOGY_IMPORT.STARTED=Début du processus de vérification d''import de l''ontologie
+CHECK_ONTOLOGY_IMPORT.OK=Succès du vérification du processus d''import de l''ontologie
+CHECK_ONTOLOGY_IMPORT.KO=Échec de vérification d''import de l''ontologie
+CHECK_ONTOLOGY_IMPORT.FATAL=Erreur technique lors du processus de vérification d''import de l''ontologie
+
 STP_IMPORT_ONTOLOGIES_NOT_AUTHORIZED_FOR_TENANT.KO=Échec du processus de mise à jour des ontologies : la mise à jour n''est pas autorisée sur le tenant.
 STP_IMPORT_ONTOLOGIES_UPDATE_INVALID_TYPE.KO=Échec du processus de mise à jour des ontologies : au moins une valeur ne correspond pas aux valeurs attendues.
 
