Item 6120 check metadata opi

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1019,6 +1019,10 @@ CHECK_DATAOBJECTPACKAGE.CHECK_CONSISTENCY.FATAL=Erreur technique lors de la vér
 CHECK_DATAOBJECTPACKAGE.CHECK_CONSISTENCY.CHECK_CONSISTENCY_ORPHAN_OBJECT.KO=Le bordereau de transfert contient des objets ou des groupes d''objets qui ne déclarent pas de rattachement à une unité archivistique
 CHECK_DATAOBJECTPACKAGE.CHECK_CONSISTENCY_ORPHAN_OBJECT.KO=Le bordereau de transfert contient des objets ou des groupes d''objets qui ne déclarent pas de rattachement à une unité archivistique
 
+CHECK_ATTACHEMENT=Vérification du rattachement entre entre objets, groupes d''objets et unités archivistiques existantes et les nouveaux.
+CHECK_ATTACHEMENT.OK=Succès de la vérification du rattachement entre entre objets, groupes d''objets et unités archivistiques existantes et les nouveaux.
+CHECK_ATTACHEMENT.KO=Échec de la vrification du rattachement entre entre objets, groupes d''objets et unités archivistiques existantes et les nouveaux.
+
 CHECK_DIGEST=Vérification de l''intégrité des objets
 CHECK_DIGEST.OK=Succès de la vérification de l''empreinte des objets
 CHECK_DIGEST.EMPTY.KO=Échec de la vérification de l''empreinte des objets : Il existe au moins un objet dont l''empreinte est absente dans le bordereau de transfert
