item 6420 fix textContent maximum length

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3241,6 +3241,10 @@ PRESERVATION_ACTION.KO=Échec du lancement de préservation
 PRESERVATION_ACTION.FATAL=Erreur technique lors du lancement du griffon
 PRESERVATION_ACTION.WARNING=Avertissement lors du lancement du griffon
 
+PRESERVATION_TESSERACT_SPLIT_TEXT_CONTENT=Lancement du découpage des métadonnées
+PRESERVATION_TESSERACT_SPLIT_TEXT_CONTENT.OK=Succès du découpage des métadonnées
+PRESERVATION_TESSERACT_SPLIT_TEXT_CONTENT.WARNING=Avertissement sur le découpage des métadonnées
+
 PRESERVATION_SIEGFRIED_IDENTIFICATION=Vérification du format
 PRESERVATION_SIEGFRIED_IDENTIFICATION.STARTED=Début de la vérification du format
 PRESERVATION_SIEGFRIED_IDENTIFICATION.STARTED.OK=Succès du début de la vérification du format
