Add diff when size is different while ingest SIP

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1498,12 +1498,12 @@ LFC.CHECK_DIGEST.CALC_CHECK.EMPTY.KO=Échec de la lecture de l''empreinte du fic
 LFC.CHECK_DIGEST.CALC_CHECK.INVALID.KO=Échec de la vérification de l''empreinte du fichier
 LFC.CHECK_DIGEST.CALC_CHECK.FATAL=Erreur technique lors calcul d''une empreinte en SHA-512
 
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE=Vérification de la taille des fichiers
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.STARTED=Début de la vérification de la taille des fichiers
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.OK=Succès de la vérification de la taille des fichiers
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.WARNING=Avertissement lors de la vérification de la taille des fichiers
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.KO=Échec de la vérification de la taille des fichiers
-LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.FATAL=Erreur technique lors de la vérification de la taille des fichiers
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE=Vérification de la taille d''un fichier binaire
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.STARTED=Début de la vérification de la taille du fichier binaire
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.OK=Succès de la vérification de la taille du fichier binaire
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.WARNING=Avertissement lors de la vérification de la taille du fichier binaire
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.KO=Échec de la vérification de la taille du fichier binaire
+LFC.CHECK_OBJECT_SIZE.CHECK_SIZE.FATAL=Erreur technique lors de la vérification de la taille du fichier binaire
 
 LFC.CHECK_OBJECT_SIZE=Vérification de la taille des fichiers
 LFC.CHECK_OBJECT_SIZE.STARTED=Début de la vérification de la taille des fichiers
