--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -1811,32 +1811,32 @@ TRACEABILITY_LINKED_CHECK_PREPARE.FATAL=Erreur technique lors de la préparation
 
 RETRIEVE_SECURE_TRACEABILITY_DATA_FILE=Vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
 RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.STARTED=Début de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
-RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.OK=Succès de la préparation de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
+RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.OK=Succès de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
 RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.WARNING=Avertissement lors de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
-RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.KO=Échec de la préparation de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
+RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.KO=Échec de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
 RETRIEVE_SECURE_TRACEABILITY_DATA_FILE.FATAL=Erreur technique lors de la vérification d''existence de fichier de sécurisation dans les offres de stockage et récupération du hash correspondant
 
 CHECKS_SECURE_TRACEABILITY_DATA_HASHES=Vérification de l''intégrité du fichier de sécurisation
 CHECKS_SECURE_TRACEABILITY_DATA_HASHES.STARTED=Début de la vérification de l''intégrité du fichier de sécurisation
-CHECKS_SECURE_TRACEABILITY_DATA_HASHES.OK=Succès de la préparation de la vérification de l''intégrité du fichier de sécurisation
+CHECKS_SECURE_TRACEABILITY_DATA_HASHES.OK=Succès de la vérification de l''intégrité du fichier de sécurisation
 CHECKS_SECURE_TRACEABILITY_DATA_HASHES.WARNING=Avertissement lors de la vérification de l''intégrité du fichier de sécurisation
-CHECKS_SECURE_TRACEABILITY_DATA_HASHES.KO=Échec de la préparation de la vérification de l''intégrité du fichier de sécurisation
+CHECKS_SECURE_TRACEABILITY_DATA_HASHES.KO=Échec de la vérification de l''intégrité du fichier de sécurisation
 CHECKS_SECURE_TRACEABILITY_DATA_HASHES.FATAL=Erreur technique lors de la vérification de l''intégrité du fichier de sécurisation
 
 EXTRACT_SECURE_TRACEABILITY_DATA_FILE=Récupération du fichier de sécurisation
 EXTRACT_SECURE_TRACEABILITY_DATA_FILE.STARTED=Début de l''extraction du fichier de sécurisation
 EXTRACT_SECURE_TRACEABILITY_DATA_FILE.OK=Succès de l''extraction du fichier de sécurisation
 EXTRACT_SECURE_TRACEABILITY_DATA_FILE.WARNING=Avertissement lors de l''extraction du fichier de sécurisation
-EXTRACT_SECURE_TRACEABILITY_DATA_FILE.KO=Échec de la préparation de l''extraction du fichier de sécurisation
+EXTRACT_SECURE_TRACEABILITY_DATA_FILE.KO=Échec de l''extraction du fichier de sécurisation
 EXTRACT_SECURE_TRACEABILITY_DATA_FILE.FATAL=Erreur technique lors de l''extraction du fichier de sécurisation
 
 
-CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG=Préparation de la vérification des journaux des écritures
+CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG=Vérification des journaux des écritures
 CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.STARTED=Début de la vérification des journaux des écritures
-CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.OK=Succès de la préparation de la vérification des journaux des écritures
-CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.WARNING=Avertissement lors de la préparation de la vérification des journaux des écritures
-CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.KO=Échec de la préparation de la vérification des journaux des écritures
-CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.FATAL=Erreur technique lors de la préparation de la vérification des journaux des écritures
+CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.OK=Succès de la vérification des journaux des écritures
+CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.WARNING=Avertissement lors de la vérification des journaux des écritures
+CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.KO=Échec de la vérification des journaux des écritures
+CHECKS_SECURE_TRACEABILITY_DATA_STORAGELOG.FATAL=Erreur technique lors de la vérification des journaux des écritures
 
 TRACEABILITY_FINALIZATION=Finalisation de la vérification des journaux sécurisés
 TRACEABILITY_FINALIZATION.STARTED=Début de la finalisation de la vérification des journaux sécurisés
