check permissions in security profile import and update

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -581,6 +581,7 @@ STP_IMPORT_SECURITY_PROFILE.OK=Succès du processus d''import du profil de sécu
 STP_IMPORT_SECURITY_PROFILE.WARNING=Avertissement lors du processus d''import du profil de sécurité
 STP_IMPORT_SECURITY_PROFILE.KO=Échec du processus d''import du profil de sécurité
 STP_IMPORT_SECURITY_PROFILE.FATAL=Erreur technique lors du processus d''import du profil de sécurité
+STP_IMPORT_SECURITY_PROFILE.UNKNOWN_PERMISSION.KO=Au moins une permission n''existe pas.
 
 STP_UPDATE_SECURITY_PROFILE=Processus de mise à jour du profil de sécurité
 STP_UPDATE_SECURITY_PROFILE.STARTED=Début du processus de mise à jour du profil de sécurité
@@ -589,6 +590,7 @@ STP_UPDATE_SECURITY_PROFILE.OK=Succès du processus de mise à jour du profil de
 STP_UPDATE_SECURITY_PROFILE.KO=Échec du processus de mise à jour du profil de sécurité
 STP_UPDATE_SECURITY_PROFILE.FATAL=Erreur technique lors du processus de mise à jour du profil de sécurité
 STP_UPDATE_SECURITY_PROFILE.WARNING=Avertissement lors du processus de mise à jour du profil de sécurité
+STP_UPDATE_SECURITY_PROFILE.UNKNOWN_PERMISSION.KO=Au moins une permission n''existe pas.
 
 STP_DELETE_SECURITY_PROFILE=Processus de suppression du profil de sécurité
 STP_DELETE_SECURITY_PROFILE.STARTED=Début du processus de suppression du profil de sécurité
