Revert "add .yml files"
This reverts commit 1d925aa58c4a28bc2d700640412ec13a73270179.

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3592,3 +3592,11 @@ INGEST_CLEANUP.WARNING=Avertissement lors du nettoyage d''ingest corrompu
 INGEST_CLEANUP.OK=Succès du nettoyage d''ingest corrompu
 INGEST_CLEANUP.KO=Échec du nettoyage d''ingest corrompu
 INGEST_CLEANUP.FATAL=Erreur technique lors du nettoyage d''ingest corrompu
+
+DATA_CONSISTENCY_AUDIT=Processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.STARTED=Début du processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.STARTED.OK=Succès du début du processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.OK=Succès du processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.WARNING=Avertissement lors du processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.KO=Échec du processus d''audit de cohérance de données
+DATA_CONSISTENCY_AUDIT.FATAL=Erreur technique lors du processus d''audit de cohérance de données
