Item #7269 : Bulk Atomic Updates Workflow
* Add new worklow definition and plugins definition and logbook messages
* Add new plugins : CheckQueriesThreshold, PrepareBulkAtomicUpdate, BulkAtomicUpdateProcess, BulkAtomicUpdateFinalize
* Add IT tests on new workflow

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3601,6 +3601,53 @@ DATA_CONSISTENCY_AUDIT.WARNING=Avertissement lors du processus d''audit de cohé
 DATA_CONSISTENCY_AUDIT.KO=Échec du processus d''audit de cohérance de données
 DATA_CONSISTENCY_AUDIT.FATAL=Erreur technique lors du processus d''audit de cohérance de données
 
+##########################################################
+# BULK_ATOMIC_UPDATE
+##########################################################
+
+BULK_ATOMIC_UPDATE_UNIT_DESC=Processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.OK=Succès du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.KO=Échec du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.STARTED=Début du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.STARTED.OK=Succès du début du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.STARTED.KO=Échec du début du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.STARTED.FATAL=Erreur technique lors du début du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_UNIT_DESC.STARTED.WARNING=Avertissement lors du début du processus de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+
+CHECK_QUERIES_THRESHOLD=Vérification des seuils de limitation des requêtes de traitement des unités archivistiques
+CHECK_QUERIES_THRESHOLD.OK=Succès de la vérification des seuils de limitation des requêtes de traitement des unités archivistiques
+CHECK_QUERIES_THRESHOLD.KO=Échec de la vérification des seuils de limitation des requêtes de traitement des unités archivistiques
+CHECK_QUERIES_THRESHOLD.FATAL=Erreur technique lors de la vérification des seuils de limitation des requêtes de traitement des unités archivistiques
+CHECK_QUERIES_THRESHOLD.WARNING=Avertissement lors de la vérification des seuils de limitation des requêtes de traitement des unités archivistiques
+
+PREPARE_BULK_ATOMIC_UPDATE_UNIT_LIST=Préparation de la liste des unités archivistiques à mettre à jour unitairement
+PREPARE_BULK_ATOMIC_UPDATE_UNIT_LIST.OK=Succès de la préparation de la liste des unités archivistiques à mettre à jour unitairement
+PREPARE_BULK_ATOMIC_UPDATE_UNIT_LIST.KO=Échec de la préparation de la liste des unités archivistiques à mettre à jour unitairement
+PREPARE_BULK_ATOMIC_UPDATE_UNIT_LIST.FATAL=Erreur technique lors de la préparation de la liste des unités archivistiques à mettre à jour unitairement
+PREPARE_BULK_ATOMIC_UPDATE_UNIT_LIST.WARNING=Avertissement lors de la préparation de la liste des unités archivistiques à mettre à jour unitairement
+
+BULK_ATOMIC_UPDATE_UNITS=Mise à jour unitaire des unités archivistiques
+BULK_ATOMIC_UPDATE_UNITS.OK=Succès de la mise à jour unitaire des unités archivistiques
+BULK_ATOMIC_UPDATE_UNITS.KO=Échec de la mise à jour unitaire des unités archivistiques
+BULK_ATOMIC_UPDATE_UNITS.FATAL=Erreur technique lors de la mise à jour unitaire des unités archivistiques
+BULK_ATOMIC_UPDATE_UNITS.WARNING=Avertissement lors de la mise à jour unitaire des unités archivistiques
+
+STP_BULK_ATOMIC_UPDATE_FINALIZE.STARTED=Début du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+STP_BULK_ATOMIC_UPDATE_FINALIZE.STARTED.OK=Succès du début du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+
+STP_BULK_ATOMIC_UPDATE_FINALIZE=Processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+STP_BULK_ATOMIC_UPDATE_FINALIZE.OK=Succès du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+STP_BULK_ATOMIC_UPDATE_FINALIZE.KO=Échec du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+STP_BULK_ATOMIC_UPDATE_FINALIZE.FATAL=Erreur technique lors du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+STP_BULK_ATOMIC_UPDATE_FINALIZE.WARNING=Avertissement lors du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+
+BULK_ATOMIC_UPDATE_FINALIZE.STARTED=Début du processus de traitement de mise à jour des générations du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE.STARTED.OK=Succès du début du processus de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE=Processus de génération du rapport de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE.OK=Succès du processus de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE.KO=Échec du processus de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE.FATAL=Erreur technique lors du processus de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
+BULK_ATOMIC_UPDATE_FINALIZE.WARNING=Avertissement lors du processus de traitement de mise à jour unitaire en masse des générations du rapport de mise à jour des métadonnées descriptives des unités archivistiques
 
 ##########################################################
 # REVERT UPDATE UNITS
