story #7041 revert essential metadata

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3600,3 +3600,66 @@ DATA_CONSISTENCY_AUDIT.OK=Succès du processus d''audit de cohérance de donnée
 DATA_CONSISTENCY_AUDIT.WARNING=Avertissement lors du processus d''audit de cohérance de données
 DATA_CONSISTENCY_AUDIT.KO=Échec du processus d''audit de cohérance de données
 DATA_CONSISTENCY_AUDIT.FATAL=Erreur technique lors du processus d''audit de cohérance de données
+
+
+##########################################################
+# REVERT UPDATE UNITS
+##########################################################
+
+STP_CHECK_REVERT=Processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.STARTED=Début du processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.STARTED.OK=Succès du début du processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.OK=Succès du processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.WARNING=Avertissement lors du processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.KO=Échec du processus de préparation de la restauration des métadonnées essentielles
+STP_CHECK_REVERT.FATAL=Erreur technique lors du processus de préparation de la restauration des métadonnées essentielles
+
+
+STP_REVERT_UPDATE=Processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.STARTED=Début du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.STARTED.OK=Succès du début du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.OK=Succès du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.WARNING=Avertissement lors du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.KO=Échec du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE.FATAL=Erreur technique lors du processus de la restauration des métadonnées essentielles
+
+STP_REVERT_UPDATE_FINALIZE=Processus de finalisation de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.STARTED=Début du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.STARTED.OK=Succès du début du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.OK=Succès du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.WARNING=Avertissement lors du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.KO=Échec du processus de la restauration des métadonnées essentielles
+STP_REVERT_UPDATE_FINALIZE.FATAL=Erreur technique lors du processus de la restauration des métadonnées essentielles
+
+
+LFC.UNIT_METADATA_REVERT=Restauration des métadonnées essentielles
+LFC.UNIT_METADATA_REVERT.STARTED=Début de la restauration des métadonnées essentielles
+LFC.UNIT_METADATA_REVERT.STARTED.OK=Succès du début de la restauration des métadonnées essentielles
+LFC.UNIT_METADATA_REVERT.OK=Succès de la restauration des métadonnées essentielles
+LFC.UNIT_METADATA_REVERT.KO=Échec de la restauration des métadonnées essentielles
+LFC.UNIT_METADATA_REVERT.FATAL=Erreur technique lors de la restauration des métadonnées essentielles
+
+
+REVERT_CHECK=Préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.STARTED=Début de la préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.STARTED.OK=Succès de la préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.OK=Succès de la préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.WARNING=Avertissement lors de la préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.KO=Échec de la préparation de la restauration des métadonnées essentielles
+REVERT_CHECK.FATAL=Erreur technique lors de la préparation de la restauration des métadonnées essentielles
+
+REVERT_UPDATE_UNITS=Restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.STARTED=Début de la restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.STARTED.OK=Succès du début de la restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.OK=Succès de la restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.WARNING=Avertissement lors de la restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.KO=Échec de la restauration des métadonnées essentielles
+REVERT_UPDATE_UNITS.FATAL=Erreur technique lors de la restauration des métadonnées essentielles
+
+REVERT_UPDATE_FINALIZE=Finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.STARTED=Début de la finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.STARTED.OK=Succès du début de la finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.OK=Succès de la finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.WARNING=Avertissement lors de la finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.KO=Échec de la finalisation de la restauration des métadonnées essentielles
+REVERT_UPDATE_FINALIZE.FATAL=Erreur technique lors de la finalisation de la restauration des métadonnées essentielles
