story #7041 fix revert unset queries

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3653,6 +3653,14 @@ BULK_ATOMIC_UPDATE_FINALIZE.WARNING=Avertissement lors du processus de traitemen
 # REVERT UPDATE UNITS
 ##########################################################
 
+REVERT_ESSENTIAL_METDATA=Restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.STARTED=Début de la restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.STARTED.OK=Succès du début de la restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.OK=Succès de la restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.WARNING=Avertissement lors de la restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.KO=Échec de la restauration des métadonnées essentielles
+REVERT_ESSENTIAL_METDATA.FATAL=Erreur technique lors de la restauration des métadonnées essentielles
+
 STP_CHECK_REVERT=Processus de préparation de la restauration des métadonnées essentielles
 STP_CHECK_REVERT.STARTED=Début du processus de préparation de la restauration des métadonnées essentielles
 STP_CHECK_REVERT.STARTED.OK=Succès du début du processus de préparation de la restauration des métadonnées essentielles
