Item #7269 : Add to ihm-demo bulk atomic update features

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -3632,6 +3632,12 @@ BULK_ATOMIC_UPDATE_UNITS.KO=Échec de la mise à jour unitaire des unités archi
 BULK_ATOMIC_UPDATE_UNITS.FATAL=Erreur technique lors de la mise à jour unitaire des unités archivistiques
 BULK_ATOMIC_UPDATE_UNITS.WARNING=Avertissement lors de la mise à jour unitaire des unités archivistiques
 
+BULK_UPDATE=Mise à jour unitaire de masse des unités archivistiques
+BULK_UPDATE.OK=Succès de la mise à jour unitaire de masse des unités archivistiques
+BULK_UPDATE.KO=Échec de la mise à jour unitaire de masse des unités archivistiques
+BULK_UPDATE.FATAL=Erreur technique lors de la mise à jour unitaire de masse des unités archivistiques
+BULK_UPDATE.WARNING=Avertissement lors de la mise à jour unitaire de masse des unités archivistiques
+
 STP_BULK_ATOMIC_UPDATE_FINALIZE.STARTED=Début du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
 STP_BULK_ATOMIC_UPDATE_FINALIZE.STARTED.OK=Succès du début du processus de génération du rapport de mise à jour unitaire en masse des métadonnées descriptives des unités archivistiques
 
