Item 7131 : Fix review comments

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -2602,11 +2602,11 @@ RECLASSIFICATION_PREPARATION_CHECK_GRAPH.KO=Échec du contrôle de cohérence du
 RECLASSIFICATION_PREPARATION_CHECK_GRAPH.FATAL=Erreur technique lors du contrôle de cohérence du graphe au moment de la modification d''arborescence des unités archivistiques
 RECLASSIFICATION_PREPARATION_CHECK_GRAPH.WARNING=Avertissement lors du contrôle de cohérence du graphe au moment de la modification d''arborescence des unités archivistiques
 
-RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES=Contrôle du bloquage de reclassification des unités archivistiques par des règles de gel.
-RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.OK=Succès du contrôle du bloquage de reclassification des unités archivistiques par des règles de gel.
-RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.KO=Échec du contrôle du bloquage de reclassification des unités archivistiques par des règles de gel.
-RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.FATAL=Erreur technique lors du contrôle du bloquage de reclassification des unités archivistiques par des règles de gel.
-RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.WARNING=Avertissement lors du contrôle du bloquage de reclassification des unités archivistiques par des règles de gel.
+RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES=Contrôle du blocage de reclassification des unités archivistiques par des règles de gel.
+RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.OK=Succès du contrôle du blocage de reclassification des unités archivistiques par des règles de gel.
+RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.KO=Échec du contrôle du blocage de reclassification des unités archivistiques par des règles de gel.
+RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.FATAL=Erreur technique lors du contrôle du blocage de reclassification des unités archivistiques par des règles de gel.
+RECLASSIFICATION_PREPARATION_CHECK_HOLD_RULES.WARNING=Avertissement lors du contrôle du blocage de reclassification des unités archivistiques par des règles de gel.
 
 RECLASSIFICATION_PREPARATION_UPDATE_DISTRIBUTION=Préparation de la mise à jour du graphe au moment de la modification d''arborescence des unités archivistiques
 RECLASSIFICATION_PREPARATION_UPDATE_DISTRIBUTION.OK=Succès de la préparation de la mise à jour du graphe au moment de la modification d''arborescence des unités archivistiques
