Item 6946  Industrialisation du poc processing

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -342,7 +342,38 @@ STP_DELETE_FORMAT.KO=Échec du processus de suppression du référentiel des for
 STP_DELETE_FORMAT.FATAL=Erreur technique lors du processus de suppression du référentiel des formats
 STP_DELETE_FORMAT.WARNING=Avertissement lors du processus de suppression du référentiel des formats
 
+INGEST_PREPARE_CHECK_ANTIVIRUS=Contrôle sanitaire du SIP
+INGEST_PREPARE_CHECK_ANTIVIRUS.STARTED=Début du contrôle sanitaire du SIP
+INGEST_PREPARE_CHECK_ANTIVIRUS.STARTED.OK=Succès du début du contrôle sanitaire du SIP
+INGEST_PREPARE_CHECK_ANTIVIRUS.OK=Succès du contrôle sanitaire du SIP : aucun virus détecté
+INGEST_PREPARE_CHECK_ANTIVIRUS.WARNING=Avertissement lors du contrôle sanitaire du SIP
+INGEST_PREPARE_CHECK_ANTIVIRUS.KO=Échec du contrôle sanitaire du SIP : fichier détecté comme infecté
+INGEST_PREPARE_CHECK_ANTIVIRUS.FATAL=Erreur technique lors du contrôle sanitaire du SIP
+
+INGEST_PREPARE_CHECK_FORMAT=Contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.STARTED=Début du contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.STARTED.OK=Succès du début du contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.OK=Succès du contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.KO=Échec du contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.FATAL=Erreur technique lors du contrôle du format du conteneur du SIP
+INGEST_PREPARE_CHECK_FORMAT.WARNING=Avertissement lors du contrôle du format du conteneur du SIP
+
+INGEST_PREPARE_CHECK_MANIFEST=Contrôle du nom du bordereau de transfert
+INGEST_PREPARE_CHECK_MANIFEST.STARTED=Début du contrôle du nom du bordereau de transfert
+INGEST_PREPARE_CHECK_MANIFEST.STARTED.OK=Succès du début du contrôle du nom du bordereau de transfert
+INGEST_PREPARE_CHECK_MANIFEST.OK=Succès du contrôle du nom du bordereau de transfert : nom du fichier conforme
+INGEST_PREPARE_CHECK_MANIFEST.KO=Échec du contrôle du nom du bordereau de transfert : nom du fichier non conforme
+INGEST_PREPARE_CHECK_MANIFEST.FATAL=Erreur technique lors du contrôle du nom du bordereau de transfert
+INGEST_PREPARE_CHECK_MANIFEST.WARNING=Avertissement lors du contrôle du nom du bordereau de transfert
+
 UPLOAD_SIP=Réception du SIP dans Vitam
+UPLOAD_SIP.STARTED=Début du processus de décompression du SIP
+UPLOAD_SIP.STARTED.OK=Succès du début du processus de décompression du SIP
+UPLOAD_SIP.OK=Succès du processus de décompression du SIP
+UPLOAD_SIP.KO=Échec du processus de décompression du SIP
+UPLOAD_SIP.FATAL=Erreur technique lors du processus de décompression du SIP
+UPLOAD_SIP.WARNING=Avertissement lors du processus de décompression du SIP
+
 STP_UPLOAD_SIP=Processus de réception du SIP
 STP_UPLOAD_SIP.STARTED=Début du processus de réception du SIP
 STP_UPLOAD_SIP.STARTED.OK=Succès du début du processus de réception du SIP
