Item 7288  Ajout de politique de conservation de version dans  managementContract

--- a/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
+++ b/sources/common/common-public/src/main/resources/vitam-logbook-messages_fr.properties
@@ -541,6 +541,7 @@ STP_IMPORT_MANAGEMENT_CONTRACT.IDENTIFIER_DUPLICATION.KO=Échec de l''import du 
 STP_IMPORT_MANAGEMENT_CONTRACT.EMPTY_REQUIRED_FIELD.KO=Échec de l''import du contrat de gestion : au moins un des champs obligatoires n''est pas renseigné
 STP_IMPORT_MANAGEMENT_CONTRACT.VALIDATION_ERROR.KO=Échec du processus d''import du contrat de gestion : erreur lors de la validation du contrat de gestion
 STP_IMPORT_MANAGEMENT_CONTRACT.STRATEGY_VALIDATION_ERROR.KO=Échec de l''import du contrat de gestion : stratégie de stockage non trouvée ou invalide
+STP_IMPORT_MANAGEMENT_CONTRACT.VERSION_RETENTION_POLICY_ERROR.KO=Échec de l''import du contrat de gestion : politique de conservation de versions invalide
 STP_IMPORT_MANAGEMENT_CONTRACT.UNKNOWN_VALUE.KO=Échec de l''import du contrat de gestion : au moins un des champs renseignés est inconnu.
 STP_IMPORT_MANAGEMENT_CONTRACT.FATAL=Erreur technique lors du processus d''import du contrat de gestion
 
@@ -578,6 +579,7 @@ STP_UPDATE_MANAGEMENT_CONTRACT.CONTRACT_NOT_FOUND.KO=Échec du processus de mise
 STP_UPDATE_MANAGEMENT_CONTRACT.IDENTIFIER_DUPLICATION.KO=Échec du processus de mise à jour du contrat de gestion : l''identifiant est déjà utilisé
 STP_UPDATE_MANAGEMENT_CONTRACT.NOT_IN_ENUM.KO=Échec du processus de mise à jour du contrat de gestion : une valeur ne correspond pas aux valeurs attendues
 STP_UPDATE_MANAGEMENT_CONTRACT.STRATEGY_VALIDATION_ERROR.KO=Échec du processus de mise à jour du contrat de gestion : stratégie de stockage non trouvée ou invalide
+STP_UPDATE_MANAGEMENT_CONTRACT.VERSION_RETENTION_POLICY_ERROR.KO=Échec du processus de mise à jour du contrat de gestion : politique de conservation de versions invalide
 STP_UPDATE_MANAGEMENT_CONTRACT.FATAL=Erreur technique lors du processus de mise à jour du contrat de gestion
 STP_UPDATE_MANAGEMENT_CONTRACT.BAD_REQUEST.KO=Échec du processus de mise à jour du contrat de gestion : une mauvaise requête a été saisie
 
